--- a/src/locales/pt/common.json
+++ b/src/locales/pt/common.json
@@ -3,5 +3,19 @@
   "menu_home": "Início",
   "menu_tools": "Acesse as ferramentas",
   "menu_about": "Sobre o projeto",
-  "menu_info": "Informações adicionais"
+  "menu_info": "Informações adicionais",
+  "title_tool_mapserver": "Servidor de mapas",
+  "title_tool_timeseries": "Series temporais de mapas",
+  "title_tool_onset": "Previsão do início da estação chuvosa",
+  "title_tool_flow": "Previsão de vazões mínimas",
+  "title_tool_modflow": "Visualização de Dados do Modelo de Águas Subterrâneas",
+  "title_tool_profit": "Lucratividade Rural",
+  "title_tool_governance": "Governança",
+  "tool_mapserver": "Visualização e análise customizada das bases de dados contidasnessa plataforma.",
+  "tool_timeseries": "Visualização e análise customizada das séries temporais de mapas a nível regional, bacia hidrográfica, áreas de drenagem e municipal para a região do Oeste da Bahia.",
+  "tool_onset": "Visualização customizada da previsão do início das chuvas para o Oeste da Bahia, conforme previsto pelo sistema de previsão climática CFSv2 do NCEP/NOAA.",
+  "tool_flow": "Visualização do status de estresse hídrico nas estações telemétricas para a região do Oeste da Bahia.",
+  "tool_modflow": "Visualização customizada dos resultados do modelo de águas subterrâneas para as bacias do Alto Rio Grande, Médio Rio Grande, Rio Corrente e Rio Carinhanha.",
+  "tool_profit": "Modelo de otimização econômica da atividade agrícola considerando o regime hídrico e disponibilidade de outorga regional.",
+  "tool_governance": "Resumo das ações de governança, mapas para visualização de estatísticas municipais de variáveis agrícolas e download de mapas anuais da Produção Agrícola Municipal em formato SIG."
 }
