--- a/src/locales/en/common.json
+++ b/src/locales/en/common.json
@@ -1,21 +1,21 @@
 {
-  "principal": "Inteligência Territorial e Hídrica para o Oeste da Bahia",
+  "principal": "Territorial and Water Intelligence for Western Bahia",
   "menu_home": "Home",
   "menu_tools": "Access the tools",
   "menu_about": "About project",
   "menu_info": "Aditional informations",
-  "title_tool_mapserver": "Servidor de mapas",
-  "title_tool_timeseries": "Series temporais de mapas",
-  "title_tool_onset": "Previsão do início da estação chuvosa",
-  "title_tool_flow": "Previsão de vazões mínimas",
-  "title_tool_modflow": "Visualização de Dados do Modelo de Águas Subterrâneas",
-  "title_tool_profit": "Lucratividade Rural",
-  "title_tool_governance": "Governança",
-  "tool_mapserver": "Visualização e análise customizada das bases de dados contidasnessa plataforma.",
-  "tool_timeseries": "Visualização e análise customizada das séries temporais de mapas a nível regional, bacia hidrográfica, áreas de drenagem e municipal para a região do Oeste da Bahia.",
-  "tool_onset": "Visualização customizada da previsão do início das chuvas para o Oeste da Bahia, conforme previsto pelo sistema de previsão climática CFSv2 do NCEP/NOAA.",
-  "tool_flow": "Visualização do status de estresse hídrico nas estações telemétricas para a região do Oeste da Bahia.",
-  "tool_modflow": "Visualização customizada dos resultados do modelo de águas subterrâneas para as bacias do Alto Rio Grande, Médio Rio Grande, Rio Corrente e Rio Carinhanha.",
-  "tool_profit": "Modelo de otimização econômica da atividade agrícola considerando o regime hídrico e disponibilidade de outorga regional.",
-  "tool_governance": "Resumo das ações de governança, mapas para visualização de estatísticas municipais de variáveis agrícolas e download de mapas anuais da Produção Agrícola Municipal em formato SIG."
+  "title_tool_mapserver": "Map server",
+  "title_tool_timeseries": "Time series of maps ",
+  "title_tool_onset": "Rainy season onset forecast",
+  "title_tool_flow": "Stream flow and water stress forecast",
+  "title_tool_modflow": "Groundwater model data viewer",
+  "title_tool_profit": "Rural profitability",
+  "title_tool_governance": "Governance",
+  "tool_mapserver": "Customized visualization and analysis of the databases contained in this platform. ",
+  "tool_timeseries": "Visualization and customized analysis of the time series of maps at regional level, watershed, drainage areas and municipalities in the Western Bahia region.",
+  "tool_onset": "Customized visualization of the onset forecast of the rains in the West of Bahia, as predicted by the CFSv2 climate forecast system of the NCEP/NOAA.",
+  "tool_flow": "Visualization of the water stress status in telemetric stations in Western Bahia region.",
+  "tool_modflow": "Customized visualization of groundwater model results for the Upper Rio Grande, Middle Rio Grande, Rio Corrente and Rio Carinhanha basins.",
+  "tool_profit": "Economic optimization model of agricultural activity considering the water regime and availability of regional grants.",
+  "tool_governance": "Summary of governance actions, maps for visualization of municipal statistics on agricultural variables and download of annual maps of Municipal Agricultural Production in GIS format."
 }
