--- a/src/locales/en/common.json
+++ b/src/locales/en/common.json
@@ -2,6 +2,7 @@
   "principal": "Territorial and Water Intelligence for Western Bahia",
   "menu_home": "Home",
   "button_tools": "Access the tools",
+  "button_knowmore": "Know more",
   "access_tools": "Access the tool",
   "access_tutorial": "Access the tutorial",
   "menu_about": "About project",
