--- a/src/locales/pt/common.json
+++ b/src/locales/pt/common.json
@@ -2,6 +2,7 @@
   "principal": "Inteligência Territorial e Hídrica para o Oeste da Bahia",
   "menu_home": "Início",
   "button_tools": "Acesse as ferramentas",
+  "button_knowmore": "Saiba mais",
   "access_tools": "Acesse a ferramenta",
   "access_tutorial": "Acesse o tutorial",
   "menu_about": "Sobre o projeto",
