--- a/src/locales/en/common.json
+++ b/src/locales/en/common.json
@@ -6,7 +6,7 @@
   "access_tools": "Access the tool",
   "access_tutorial": "Access the tutorial",
   "menu_about": "About project",
-  "menu_info": "Aditional informations",
+  "menu_info": "Aditional information",
   "title_tool_mapserver": "Map server",
   "title_tool_timeseries": "Time series of maps ",
   "title_tool_onset": "Rainy season onset forecast",
